# premiumize-rust

./: Cargo.toml  README.md
src/: main.rs  premiumize.rs
